// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body Large renders correctly: Regular 1`] = `
<div>
  <div
    class="sc-bczRLJ dcfFMD"
  >
    Jest
  </div>
</div>
`;

exports[`Body Small renders correctly: Regular 1`] = `
<div>
  <div
    class="sc-gsnTZi gUgIWf"
  >
    Jest
  </div>
</div>
`;

exports[`Heading 1 renders correctly: Regular 1`] = `
<div>
  <h1
    class="sc-dkzDqf SuHUx"
  >
    Jest
  </h1>
</div>
`;
